fixed search box inivisible

--- a/src/app/crm/contacts/documents/documents.component.less
+++ b/src/app/crm/contacts/documents/documents.component.less
@@ -524,4 +524,10 @@
             padding-right: 7px;
         }
     }
+    ::ng-deep .dx-toolbar-item {
+        display: table-cell !important;
+    }
+    ::ng-deep .dx-texteditor {
+        display: block !important;
+    }
 }
